Fix floats on IE8
Fix policy page sections, param header stats and graph.

--- a/source_assets/styles/_base.scss
+++ b/source_assets/styles/_base.scss
@@ -491,7 +491,7 @@ a:active{
 
 .col--main {
   @include col(8/12);
-  margin-bottom: 2rem;
+  margin-bottom: 3rem;
   .layout--page & {
     @include col(12/12);
   }
@@ -510,9 +510,9 @@ a:active{
 
 .col--sec {
   @include col(4/12);
-  margin-bottom: 2rem;
-  @media #{$large-up} {
-    @include col(4/12);
+  margin-bottom: 3rem;
+  .lt-ie9 & {
+    margin-right: 0 !important;
   }
 }
 
@@ -786,6 +786,9 @@ a:active{
       padding: 0;
       border: 0;
     }
+    .lt-ie9 & {
+      margin-right: 0 !important;
+    }
   }
   &__table {
     @include col(12/12);
@@ -810,6 +813,9 @@ a:active{
     }
     &__graph {
       @include col(4/12);
+      .lt-ie9 & {
+        margin-right: 0 !important;
+      }
     }
   }
 }
@@ -882,7 +888,7 @@ a:active{
 .layout--entry.policies {
   .col--main,
   .col--sec {
-    section {
+    .blk {
       padding-bottom: 2rem;
       margin-bottom: 2rem;
       border-bottom: 1px solid tint($primary-color, 90%);
